[package]
name = "ollama-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] } 